<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f9f9f9"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/avatar_image_view"
            style="@style/AvatarImageView"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" />


        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar_image_view"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_text_view"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_padding">

            <TextView
                android:id="@+id/days_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/days_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/days_text_view"
                android:layout_toRightOf="@id/days_text_view"
                android:paddingLeft="@dimen/activity_vertical_padding"
                android:text="@string/days_will_birthday" />
        </LinearLayout>

        <View style="@style/ViewLine" />

        <LinearLayout style="@style/LinearLayoutStaticHeight">

            <TextView
                style="@style/TextViewNormal"
                android:text="@string/birthday_date" />

            <TextView
                android:id="@+id/birthday_text_view"
                style="@style/TextViewNormal"
                android:layout_width="match_parent"
                android:gravity="right" />
        </LinearLayout>

        <View style="@style/ViewLine" />

        <LinearLayout style="@style/LinearLayoutStaticHeight">

            <TextView
                style="@style/TextViewNormal"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/phone_text_view"
                style="@style/TextViewNormal"
                android:layout_width="match_parent"
                android:gravity="right"
                android:onClick="callPhone" />
        </LinearLayout>

        <View style="@style/ViewLine" />

        <LinearLayout style="@style/LinearLayoutStaticHeight">

            <TextView
                style="@style/TextViewNormal"
                android:text="@string/remark" />

            <TextView
                android:id="@+id/remark_text_view"
                style="@style/TextViewNormal"
                android:layout_width="match_parent"
                android:gravity="right" />
        </LinearLayout>

        <View style="@style/ViewLine" />


    </LinearLayout>

</ScrollView>